# pkg/controller/votes.go
@@ -42,7 +42,7 @@ func (c *Controller) AddVotes(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, result)
 }
 
-// AddNewVoter godoc
+// GetAllVotes godoc
 //
 //	@Summary		Get all votes for the names
 //	@Description	Get all votes for the names aggregated
@@ -57,6 +57,31 @@ func (c *Controller) AddVotes(ctx *gin.Context) {
 func (c *Controller) GetAllVotes(ctx *gin.Context) {
 
 	result, err := v.GetVotes()
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, result)
+}
+
+// GetVotesPerVoters godoc
+//
+//	@Summary		Get all votes for the voters
+//	@Description	Get all votes for the voters aggregated
+//	@Tags			voting
+//	@Accept			json
+//	@Produce		json
+//	@Success		200					{object}	[]v.Vote
+//	@Failure		400					{object}	HTTPError
+//	@Failure		404					{object}	HTTPError
+//	@Failure		500					{object}	HTTPError
+//	@Router			/votes/voters [get]
+func (c *Controller) GetVotesPerVoters(ctx *gin.Context) {
+
+	result, err := v.GetVotesForVoters()
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, gin.H{
 			"error": err.Error(),
